----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-09-20 Michal Čihař  <michal@cihar.com>
    * lang/czech: Update.
    * lang/sync_lang.sh: Default to iconv, as it doesn't break some
      translations as recode does.
    * lang/japanese-euc.inc.php: Don't allow recoding for this one.

2004-09-22 Alexander M. Turek  <me@derrabus.de>
    * lang/turkish-*.inc.php: Update, thanks to boralioglu.
    * lang/sync_lang.sh: Switched turkish base charset to UTF-8.

2004-09-21 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/dbi/mysql.dbi.lib.php: typo, thanks to Matthias Pigulla
    ### 2.6.0-rc3 released

2004-09-21 Alexander M. Turek  <me@derrabus.de>
    * db_details.php, read_dump.php, tbl_query_box.php: Allow import of
      non-UTF-8 SQL dumps. Thanks to Marc for the initial patch.
      FIXME: The current solution breaks the display of the executed queries.
    * lang/*.inc.php, libraries/mysql_charsets.lib.php: Made
      PMA_getCollationDescr() recognize the new Persian collations that will be
      included in MySQL 4.1.5.

2004-09-20 Marc Delisle  <lem9@users.sourceforge.net>
    * read_dump.php, libraries/read_dump.lib.php: bug #1030644,
      error importing when last table exported was empty
    * libraries/dbi/mysql.dbi.lib.php: tell the client library to use
      CLIENT_LOCAL_FILES (flag 128), thanks to Matthias Pigulla

2004-09-20 Michal Čihař  <michal@cihar.com>
    * Documentation.html: Add info about theme generations.

2004-09-19 Alexander M. Turek  <me@derrabus.de>
    * Documentation.html: Clarification.

2004-09-19 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/latvian: Updated, thanks to Sandis Jerics (saaa2002).

2004-09-18 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/russian updated, thanks to "nobody"
    * lang/albanian: Updated, thanks to Laurent Dhima (laurenti).

2004-09-16 Marc Delisle  <lem9@users.sourceforge.net>